--- a/example/PositionPicker.html
+++ b/example/PositionPicker.html
@@ -7,10 +7,9 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <title>PositionPicker</title>
-  <script src="../libs/Cesium/Cesium.js"></script>
+  <link rel='stylesheet' href='https://cesium.com/downloads/cesiumjs/releases/1.92/Build/Cesium/Widgets/widgets.css'>
+  <script src='https://cesium.com/downloads/cesiumjs/releases/1.92/Build/Cesium/Cesium.js'></script>
   <style>
-    @import url(../libs/Cesium/Widgets/widgets.css);
-
     html,
     body,
     #cesiumContainer {
