--- a/example/exportSceneAsImage.html
+++ b/example/exportSceneAsImage.html
@@ -28,11 +28,25 @@
       width: 125px;
       z-index: 999;
     }
+
     #btn {
+      font-size: 15px;
+      width: 140px;
       height: 40px;
-      width: 125px;
-      border-radius: 5px;
-      background-color: rgb(109, 171, 228);
+      border-width: 1px;
+      color: #14396a;
+      border-color: #3866a3;
+      font-weight: bold;
+      border-radius: 6px;
+      box-shadow: inset 0px 1px 0px 0px #bee2f9;
+      text-shadow: inset 0px 1px 0px #7cacde;
+      background: linear-gradient(#63b8ee, #468ccf);
+      margin-bottom: 10px;
+    }
+
+    #btn:hover {
+      cursor: pointer;
+      background: linear-gradient(#468ccf, #63b8ee);
     }
   </style>
 </head>
