将示例中的影像服务由BingMap替换为ArcGIS

--- a/example/PositionPicker.html
+++ b/example/PositionPicker.html
@@ -29,6 +29,9 @@
     const viewer = new Cesium.Viewer("cesiumContainer", {
       animation: false,
       timeline: false,
+      imageryProvider: new Cesium.ArcGisMapServerImageryProvider({
+        url: 'https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer'
+      })
     });
     viewer._cesiumWidget._creditContainer.style.display = "none"
     viewer.terrainProvider = Cesium.createWorldTerrain()
