--- a/example/WaterMask.html
+++ b/example/WaterMask.html
@@ -59,7 +59,7 @@
         29.17104,
       ]
     }
-    const waterMask = new WaterMask(Cesium, viewer, './img/normal.jpg', waterMaskOpts)
+    const waterMask = new WaterMask(Cesium, viewer, './img/waterNormalsSmall.jpg', waterMaskOpts)
     const waterMaskPrimitive = waterMask.load()
 
     // lil-gui
